<resources>
    <string name="app_name">Cwiczenie1_czesc2</string>
    <string name="opis">To jest cwiczenie numer 1</string>
    <string name="autor">Van Hien Le</string>
    <string name="togglebutton">Toggle Button</string>
    <string name="radioButton1">Show the image</string>
    <string name="radioButton2">Hide the image</string>
    <string name="text1">Text 1</string>
    <string name="toast">Toast</string>
    <string name="back">Back</string>
    <string name="imageDiscription">landscape</string>
    <string name="main_button1">1</string>
    <string name="main_button2">2</string>
    <string name="main_button3">3</string>
    <string name="label1">tekst</string>
    <string name="label2">e-mail</string>
    <string name="label3">liczba</string>
    <string name="label4">tel.</string>
</resources>